--- a/blocks/package.json
+++ b/blocks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wp-embedder",
+  "name": "file-embedder",
   "description": "Block for embedding PDF documents.",
   "version": "1.0.0",
   "license": "GPL-2.0-or-later",
